example/data/invalid/02-unsupported-version.notx
# notx/2.0
# note_urn:      notx:note:02c7d9e1-4a3f-5b8c-0d2e-invalid-version
# name:          Invalid Version Test
# created_at:    2025-01-15T08:00:00Z
# head_sequence: 1

1:2025-01-15T08:00:00Z:notx:usr:7f3e9c1a-2b4d-4e6f-8a0b-1c2d3e4f5a6b
->
1 | This file has an unsupported version

---
